# texture-baker

./: README.md  __init__.py  cli.py  cli.sh  compile.sh  pyproject.toml  setup.sh
modules/bake/: bake_ambient_occlusion.py  bake_basecolor.py  bake_normal.py  bake_object.py  bake_roughness_metallic.py
modules/materials/: generate_highpoly_material.py  get_or_generate_bake_bc_material.py  get_or_generate_bake_rmo_material.py  get_or_generate_material.py
modules/models/: ambient_occlusion.py  bake_object.py  base_color.py  highpoly.py  lowpoly.py  normal.py  rmo.py  target_material.py
modules/utilities/: bake_texture.py  custom_sort.py  get_bake_objects.py  get_highpoly_names.py  print_log.py  save_image.py
