[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["kazuki <kazuki@jeis-ai.com>"]
readme = "README.md"
packages = [{ include = "template-python" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.27.1"
nbconvert = "^7.11.0"
tabulate = "^0.9.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
