[tool.poetry]
name = "texture-baker"
version = "0.1.0"
description = ""
authors = ["kazukitash <kazukitash@gmail.com>"]
readme = "README.md"
packages = [{ include = "texture-baker" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.27.1"
nbconvert = "^7.11.0"
tabulate = "^0.9.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
